--- a/BuildGrammar/BuildGrammar.vcxproj.filters
+++ b/BuildGrammar/BuildGrammar.vcxproj.filters
@@ -15,6 +15,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="..\Grammar\function.g4" />
+    <CustomBuild Include="..\Grammar\function.g4">
+      <Filter>Файлы заголовков</Filter>
+    </CustomBuild>
   </ItemGroup>
 </Project>
