--- a/Course/Course.csproj
+++ b/Course/Course.csproj
@@ -102,13 +102,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Grammar\Grammar.csproj">
-      <Project>{d2923984-59c7-43d6-8009-33442f87bdc6}</Project>
-      <Name>Grammar</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Volter2\Volter2.csproj">
-      <Project>{6ff8949b-df1b-473c-a0ae-f72fc43293e3}</Project>
-      <Name>Volter2</Name>
+    <ProjectReference Include="..\InverseProblem\InverseProblem.csproj">
+      <Project>{55cfed09-8ce8-4ba6-aa79-62cdb9996c79}</Project>
+      <Name>InverseProblem</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
