--- a/InverseProblem/InverseProblem.csproj
+++ b/InverseProblem/InverseProblem.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="InverseProblem.cs" />
+    <Compile Include="InverseProblem1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
